Add steps for cherry cobbler recipe

--- a/recipes/cherry_cobbler.html
+++ b/recipes/cherry_cobbler.html
@@ -11,7 +11,7 @@
         <p><h4>This was handed down by my Grandmother. You can use any kind of fruit filling. If using cherry, pie filling can be substituted with 2 cups fresh cherries.</h4></p>
 
         <p><h3>Ingredients</h3></p>
-        <p> <ul>
+        <ul>
             <li>1/2 cup butter</li>
             <li>1 cup all-purpose flour</li>
             <li>1 cup white sugar</li>
@@ -19,7 +19,17 @@
             <li>1 cup milk</li>
             <li>1 (21 ounce) can cherry pie filling</li>
             </ul>
-        </p>
+        
+
+        <p><h3>Steps</h3></p>
+        <ol>
+            <li>Preheat oven to 275 degrees F (135 degrees C). Place butter or margarine in a 9x13 inch baking dish and set on oven rack to melt.</li>
+            <li>In a medium bowl, mix together flour, sugar, and baking powder. Stir in milk.</li>
+            <li>Remove baking dish from oven as soon as butter or margarine is melted. Pour flour mixture into dish, but DO NOT STIR. Pour fruit evenly into pan, and DO NOT STIR.</li>
+            <li>Raise oven temperature to 350 degrees F (175 degrees C). Bake cobbler for 50 to 60 minutes, until golden brown.</li>
+        </ol>
+
+
 
 
 
