--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     </head>
     <body>
         <ul>
-            <a href="./recipes/cherry_cobbler.html">Cherry Cobbler</a>
+            <li><a href="./recipes/cherry_cobbler.html">Cherry Cobbler</a></li>
+            <li><a href="./recipes/skillet_strawberry_shortcake.html">Skillet Strawberry Shortcake</li>
+
         </ul>
         
     </body>
