--- a/recipes/skillet_strawberry_shortcake.html
+++ b/recipes/skillet_strawberry_shortcake.html
@@ -5,6 +5,50 @@
         <title>Skillet Strawberry Shortcake</title>
     </head>
     <body>
+        <h1>Skillet Strawberry Shortcake</h1>
+        <img alt="a picture of finished Skillet Strawberry Shortcake" src="images/skillet_strawberry_shortcake.png">
+
+        <p><h4>Fresh strawberries are one of the sweetest harbingers of spring and summer. And strawberry shortcakes are most assuredly one of the best ways to celebrate the arrival of warmer, sunnier days. Of course, the petite, layered berry-biscuit stacks aren't exactly fuss-free. This impressive skillet strawberry shortcake recipe eliminates much of the hassle and mess of traditional strawberry shortcakes. Instead of flouring the counter and rolling and cutting out individual biscuits, you'll bake one giant skillet biscuit cake that's topped with macerated strawberries and whipped cream.
+
+        </h4></p>
+
+        <p><h3>Ingredients</h3></p>
+        <p><h3>Shortcake:</h3></p>
+        <ul>
+            <li>3 cups all-purpose flour</li>
+            <li>1/2 cup white sugar</li>
+            <li>1 tablespoon baking powder</li>
+            <li>1 teaspoon salt</li>
+            <li>1 cup cold buttermilk</li>
+            <li>1 large egg yolk</li>
+            <li>1 teaspoon vanilla extract</li>
+            <li>1/2 cup sliced strawberries</li>
+        </ul>
+        <p><h3>Strawberry Topping:</h3></p>
+        <ul>
+            <li>4 cups ripe strawberries, hulled and quartered</li>
+            <li>2 tablespoons white sugar</li>
+            <li>1 medium lemon, zested</li>
+        </ul>
+
+        <p><h3>Whipped Cream:</h3></p>
+        <ul>
+            <li>1 cup heavy whipping cream</li>
+            <li>1 tablespoon white sugar, or more to taste</li>
+            <li>1/4 teaspoon vanilla extract</li>
+        </ul>
         
+
+        <p><h3>Steps</h3></p>
+        <ol>
+            <li>Preheat the oven to 400 degrees F (200 degrees C). Lightly grease a 10-inch cast iron skillet; line the bottom with a round of parchment paper.</li>
+            <li>Whisk flour, sugar, baking powder, and salt for shortcake together in a large mixing bowl. Whisk buttermilk, egg yolk, and vanilla together in a glass measuring cup until evenly combined; set aside.</li>
+            <li>Scatter the butter pieces over the flour mixture. Use a rubbing motion with your fingertips and cut the butter into the flour mixture to distribute. Create a well in the center of the flour mixture. Pour the buttermilk mixture into the center of the well. Use a rubber spatula to mix the flour into the buttermilk mixture to form a moist, shaggy dough.</li>
+            <li>Transfer the dough to the prepared skillet. Smooth the dough to distribute evenly in the pan. Press the sliced strawberries gently into the surface.</li>
+            <li>Bake in the preheated oven until golden brown and baked through, 25 to 30 minutes. Cool for 10 minutes.</li>
+            <li>To prepare the topping, stir together the quartered strawberries, sugar, and lemon zest in a medium mixing bowl to macerate.</li>
+            <li>To prepare the whipped cream, combine whipping cream, sugar, and vanilla in a chilled mixing bowl. Using an electric mixer fitted with a whisk attachment, beat at medium speed until soft peaks form.</li>
+            <li>Spoon the strawberries and juices over the shortcake. Serve with whipped cream.</li>
+        </ol>
     </body>
 </html>
