--- a/recipes/skillet_strawberry_shortcake.html
+++ b/recipes/skillet_strawberry_shortcake.html
@@ -8,9 +8,7 @@
         <h1>Skillet Strawberry Shortcake</h1>
         <img alt="a picture of finished Skillet Strawberry Shortcake" src="images/skillet_strawberry_shortcake.png">
 
-        <p><h4>Fresh strawberries are one of the sweetest harbingers of spring and summer. And strawberry shortcakes are most assuredly one of the best ways to celebrate the arrival of warmer, sunnier days. Of course, the petite, layered berry-biscuit stacks aren't exactly fuss-free. This impressive skillet strawberry shortcake recipe eliminates much of the hassle and mess of traditional strawberry shortcakes. Instead of flouring the counter and rolling and cutting out individual biscuits, you'll bake one giant skillet biscuit cake that's topped with macerated strawberries and whipped cream.
-
-        </h4></p>
+        <p><h4>Fresh strawberries are one of the sweetest harbingers of spring and summer. And strawberry shortcakes are most assuredly one of the best ways to celebrate the arrival of warmer, sunnier days. Of course, the petite, layered berry-biscuit stacks aren't exactly fuss-free. This impressive skillet strawberry shortcake recipe eliminates much of the hassle and mess of traditional strawberry shortcakes. Instead of flouring the counter and rolling and cutting out individual biscuits, you'll bake one giant skillet biscuit cake that's topped with macerated strawberries and whipped cream.</h4></p>
 
         <p><h3>Ingredients</h3></p>
         <p><h3>Shortcake:</h3></p>
