--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <body>
         <ul>
             <li><a href="./recipes/cherry_cobbler.html">Cherry Cobbler</a></li>
-            <li><a href="./recipes/skillet_strawberry_shortcake.html">Skillet Strawberry Shortcake</li>
+            <li><a href="./recipes/skillet_strawberry_shortcake.html">Skillet Strawberry Shortcake</a></li>
+            <li><a href="./recipes/blueberry_crumb_bars.html">Blueberry Crumb Bars</a></li>
 
         </ul>
         
